# streamfile-server-nodejs

./: .cursorignore  .gitattributes  .gitignore  LICENSE  Makefile  README.md  app.js  changelog.md  compose.yaml  config.yaml.example  package-lock.json  package.json  secure-link-generator.html  server.js  server.ts  tailwind.config.js  test_dist.js  tsconfig.frontend.json  tsconfig.json  webpack.config.js
.container/: Dockerfile  compose.yaml
.github/workflows/: build.yml
native/search_feat/: Cargo.toml  README.md  USAGE.md  build.js  build.sh  example.js  package-lock.json  package.json  test.js  test_addon.js
native/search_feat/src/: lib.rs  main.rs  search_feat.rs
public/: custom-file-browser-styles.css  custom-file-browser.html  custom-file-browser.js  file-browser.html  file-browser.js  index.html  markdown-viewer.html  output.css  styles.css  upload.js  video-player.html
public/file-browser/: file-browser-styles.css  file-browser.html  file-browser.js
public/fonts/: generate_fontface.py
public/icons/: README.md
scripts/: bundle-backend.cjs  clean.cjs  markdown-post-build.cjs  post-build-prod.cjs  post-build.js
src/: MarkdownViewer.js  MarkdownViewer.tsx  interface-styles.css  markdown-styles.css  server.ts  styles.css
src/backend/: eslint.config.ts  package-lock.json  package.json  server.ts
src/backend/types/: index.ts
src/backend/utils/: fileSearch.ts  isMediaExtension.ts  paths.ts  search-files.ts
src/frontend/: file-browser.ts  upload.ts
src/frontend/markdown-viewer/: index.html  package-lock.json  package.json  tailwind.config.js  (+3 more)
(+13 files in other folders)
