[package]
name = "file_search_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file_search_test"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16"
napi-derive = "2.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"

[build-dependencies]
napi-build = "2.1"
